--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <a class="footer-link" href="https://akshaya101.github.io/css-cv/">Website</a>
         <p>© 2020 Akshaya Chanchala.</p>
       </div>
       
